@@ -27,8 +27,8 @@ import fittoring.mentoring.business.repository.MentoringRepository;
 import fittoring.mentoring.business.repository.ReservationRepository;
 import fittoring.mentoring.business.repository.ReviewRepository;
 import fittoring.mentoring.business.service.JwtProvider;
+import fittoring.mentoring.presentation.dto.MentoringRegisterRequest;
 import fittoring.mentoring.presentation.dto.CertificateSpecAndImageResponse;
-import fittoring.mentoring.presentation.dto.MentoringRequest;
 import fittoring.mentoring.presentation.dto.MentoringResponse;
 import fittoring.mentoring.presentation.dto.MentoringSummaryResponse;
 import fittoring.util.DbCleaner;
@@ -785,13 +785,13 @@ class MentoringControllerTest {
         String newIntroduction = "수정된 긴 글 소개";
         int newCareer = 5;
         String newContent = "수정된 한 줄 소개";
-        MentoringRequest requestBody = new MentoringRequest(
-                newPrice,
-                List.of(newCategory),
-                newIntroduction,
-                newCareer,
-                newContent,
-                Collections.emptyList()
+        MentoringRegisterRequest requestBody = new MentoringRegisterRequest(
+            newPrice,
+            List.of(newCategory),
+            newIntroduction,
+            newCareer,
+            newContent,
+            Collections.emptyList()
         );
         String accessToken = jwtProvider.createAccessToken(mentor.getId());
 
@@ -826,13 +826,13 @@ class MentoringControllerTest {
         String newIntroduction = "수정된 긴 글 소개";
         int newCareer = 5;
         String newContent = "수정된 한 줄 소개";
-        MentoringRequest requestBody = new MentoringRequest(
-                newPrice,
-                List.of(newCategory),
-                newIntroduction,
-                newCareer,
-                newContent,
-                Collections.emptyList()
+        MentoringRegisterRequest requestBody = new MentoringRegisterRequest(
+            newPrice,
+            List.of(newCategory),
+            newIntroduction,
+            newCareer,
+            newContent,
+            Collections.emptyList()
         );
         String accessToken = jwtProvider.createAccessToken(mentor.getId());
 
@@ -882,13 +882,13 @@ class MentoringControllerTest {
         String newIntroduction = "수정된 긴 글 소개";
         int newCareer = 5;
         String newContent = "수정된 한 줄 소개";
-        MentoringRequest requestBody = new MentoringRequest(
-                newPrice,
-                List.of(newCategory),
-                newIntroduction,
-                newCareer,
-                newContent,
-                Collections.emptyList()
+        MentoringRegisterRequest requestBody = new MentoringRegisterRequest(
+            newPrice,
+            List.of(newCategory),
+            newIntroduction,
+            newCareer,
+            newContent,
+            Collections.emptyList()
         );
         String accessToken = jwtProvider.createAccessToken(invalidMember.getId());
 
